added auth data and swagger
