# src/routes/auth.routes.js
@@ -1,15 +1,13 @@
 const express = require("express");
 const router = express.Router();
-const { auth, users } = require("../controllers/index");
+const { auth } = require("../controllers/index");
 
 router.post("/login", auth.userLogin);
 
-router.post("/admin/login", auth.adminLogin);
+router.post("/register", auth.registerNewUser);
 
-router.post("/register", users.addUsers);
+// router.post("/verify", auth.verifyEmail);
 
-router.post("/verify", auth.verifyEmail);
-
-router.put("/reset", auth.resetPassword);
+// router.put("/reset", auth.resetPassword);
 
 module.exports = router;
