# swagger/docs/auth.json
@@ -31,10 +31,6 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "name": {
-                    "type": "string",
-                    "example": "Alice Smith"
-                  },
                   "user_name": {
                     "type": "string",
                     "example": "alice_smith"
@@ -43,37 +39,9 @@
                     "type": "string",
                     "example": "hashed_password_here"
                   },
-                  "email": {
+                  "user_type": {
                     "type": "string",
-                    "example": "alice@example.com"
-                  },
-                  "mobile_number": {
-                    "type": "string",
-                    "example": "1234567890"
-                  },
-                  "user_role": {
-                    "type": "string",
-                    "example": "CE"
-                  },
-                  "user_code": {
-                    "type": "string",
-                    "example": "U12345"
-                  },
-                  "center_code": {
-                    "type": "string",
-                    "example": "C123"
-                  },
-                  "region_code": {
-                    "type": "string",
-                    "example": "R123"
-                  },
-                  "org_name": {
-                    "type": "string",
-                    "example": "Example Organization"
-                  },
-                  "org_code": {
-                    "type": "string",
-                    "example": "ORG123"
+                    "example": "admin"
                   }
                 }
               }
@@ -104,49 +72,6 @@
                 "example": {
                   "username": "alice_smith",
                   "password": "Vikasms07@"
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Login Successfully"
-          },
-          "400": {
-            "description": "Bad Request - Invalid input data"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/v1/auth/admin/login": {
-      "post": {
-        "tags": ["authentication"],
-        "summary": "admin and super admin login with valid credentials",
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "username": {
-                    "type": "string"
-                  },
-                  "password": {
-                    "type": "string"
-                  }
-                },
-                "required": ["username", "password"],
-                "example": {
-                  "username": "techplus",
-                  "password": "Super@123"
                 }
               }
             }
